# ftw-ratings-app

./: .gitignore  0_🏠Home.py  Pipfile  README.md  app.html  app.qmd  pyproject.toml
R/: ftw_theme.R
app/: 0_🏠_Home.py
app/pages/: 1_7️⃣_Player_Ratings.py  2_🏟️_Team_Performance.py  3_🏅_Comparisons.py
app_files/libs/bootstrap/: bootstrap.min.css
pages/: 1_7️⃣Player_Ratings.py  1_7️⃣_Player_Ratings.py  2_🏟️Team_Performance.py  2_🏟️_Team_Performance.py  3_🏅Comparisons.py  3_🏅_Comparisons.py
rsconnect/documents/app.qmd/shinyapps.io/paulj1989/: ftw-ratings-app.dcf
